--- a/src/IdentityPrvd.WebApi/appsettings.json
+++ b/src/IdentityPrvd.WebApi/appsettings.json
@@ -45,6 +45,9 @@
         "IsAvailable": false,
         "ClientId": "[PLACEHOLDER]",
         "ClientSecret": "[PLACEHOLDER]"
+      },
+      "Steam": {
+        "ClientId": "[PLACEHOLDER]"
       }
     }
   },
