--- a/src/IdentityPrvd.WebApi/appsettings.json
+++ b/src/IdentityPrvd.WebApi/appsettings.json
@@ -20,9 +20,9 @@
       "SessionLifeTimeInDays": 0,
       "SecretKey": "[PLACEHOLDER]"
     },
-    "Auth": {
+    "ExternalProviders": {
       "Google": {
-        "IsAvailable": true,
+        "IsAvailable": false,
         "ClientId": "[PLACEHOLDER]",
         "ClientSecret": "[PLACEHOLDER]"
       },
@@ -33,8 +33,8 @@
       },
       "Facebook": {
         "IsAvailable": false,
-        "AppId": "[PLACEHOLDER]",
-        "AppSecret": "[PLACEHOLDER]"
+        "ClientId": "[PLACEHOLDER]",
+        "ClientSecret": "[PLACEHOLDER]"
       },
       "Twitter": {
         "IsAvailable": false,
@@ -47,6 +47,7 @@
         "ClientSecret": "[PLACEHOLDER]"
       },
       "Steam": {
+        "IsAvailable": false,
         "ClientId": "[PLACEHOLDER]"
       }
     }
