Add generic AuthSchemes

--- a/src/IdentityPrvd.WebApi/appsettings.json
+++ b/src/IdentityPrvd.WebApi/appsettings.json
@@ -24,31 +24,38 @@
       "Google": {
         "IsAvailable": false,
         "ClientId": "[PLACEHOLDER]",
-        "ClientSecret": "[PLACEHOLDER]"
+        "ClientSecret": "[PLACEHOLDER]",
+        "Icon": "[PLACEHOLDER]"
       },
       "Microsoft": {
         "IsAvailable": false,
         "ClientId": "[PLACEHOLDER]",
-        "ClientSecret": "[PLACEHOLDER]"
+        "ClientSecret": "[PLACEHOLDER]",
+        "Icon": "[PLACEHOLDER]"
       },
       "Facebook": {
         "IsAvailable": false,
         "ClientId": "[PLACEHOLDER]",
-        "ClientSecret": "[PLACEHOLDER]"
+        "ClientSecret": "[PLACEHOLDER]",
+        "Icon": "[PLACEHOLDER]"
       },
       "Twitter": {
         "IsAvailable": false,
         "ClientId": "[PLACEHOLDER]",
-        "ClientSecret": "[PLACEHOLDER]"
+        "ClientSecret": "[PLACEHOLDER]",
+        "Icon": "[PLACEHOLDER]"
       },
       "GitHub": {
         "IsAvailable": false,
         "ClientId": "[PLACEHOLDER]",
-        "ClientSecret": "[PLACEHOLDER]"
+        "ClientSecret": "[PLACEHOLDER]",
+        "Icon": "[PLACEHOLDER]"
       },
       "Steam": {
         "IsAvailable": false,
-        "ClientId": "[PLACEHOLDER]"
+        "ClientId": "[PLACEHOLDER]",
+        "ClientSecret": "[PLACEHOLDER]",
+        "Icon": "[PLACEHOLDER]"
       }
     }
   },
