--- a/src/IdentityPrvd.WebApi/appsettings.json
+++ b/src/IdentityPrvd.WebApi/appsettings.json
@@ -56,6 +56,18 @@
         "ClientId": "[PLACEHOLDER]",
         "ClientSecret": "[PLACEHOLDER]",
         "Icon": "[PLACEHOLDER]"
+      },
+      "Samsung": {
+        "IsAvailable": false,
+        "ClientId": "[PLACEHOLDER]",
+        "ClientSecret": "[PLACEHOLDER]",
+        "Icon": "[PLACEHOLDER]"
+      },
+      "BattleNet": {
+        "IsAvailable": false,
+        "ClientId": "[PLACEHOLDER]",
+        "ClientSecret": "[PLACEHOLDER]",
+        "Icon": "[PLACEHOLDER]"
       }
     }
   },
