Add Discord external provider

--- a/src/IdentityPrvd.WebApi/appsettings.json
+++ b/src/IdentityPrvd.WebApi/appsettings.json
@@ -68,6 +68,12 @@
         "ClientId": "[PLACEHOLDER]",
         "ClientSecret": "[PLACEHOLDER]",
         "Icon": "[PLACEHOLDER]"
+      },
+      "Discord": {
+        "IsAvailable": false,
+        "ClientId": "[PLACEHOLDER]",
+        "ClientSecret": "[PLACEHOLDER]",
+        "Icon": "[PLACEHOLDER]"
       }
     }
   },
