Add Apple external provider

--- a/src/IdentityPrvd.WebApi/appsettings.json
+++ b/src/IdentityPrvd.WebApi/appsettings.json
@@ -74,6 +74,14 @@
         "ClientId": "[PLACEHOLDER]",
         "ClientSecret": "[PLACEHOLDER]",
         "Icon": "[PLACEHOLDER]"
+      },
+      "Apple": {
+        "IsAvailable": false,
+        "ClientId": "[PLACEHOLDER]",
+        "KeyId": "[PLACEHOLDER]",
+        "TeamId": "[PLACEHOLDER]",
+        "FilePath": "[PLACEHOLDER]",
+        "Icon": "[PLACEHOLDER]"
       }
     }
   },
