Add Spotify external provider

--- a/src/IdentityPrvd.WebApi/appsettings.json
+++ b/src/IdentityPrvd.WebApi/appsettings.json
@@ -82,8 +82,14 @@
         "TeamId": "[PLACEHOLDER]",
         "FilePath": "[PLACEHOLDER]",
         "Icon": "[PLACEHOLDER]"
+      },
+      "Spotify": {
+        "IsAvailable": false,
+        "ClientId": "[PLACEHOLDER]",
+        "ClientSecret": "[PLACEHOLDER]",
+        "Icon": "[PLACEHOLDER]"
       }
-    }
-  },
-  "AllowedHosts": "*"
+    },
+    "AllowedHosts": "*"
+  }
 }
