--- a/src/IdentityPrvd/IdentityPrvd.csproj
+++ b/src/IdentityPrvd/IdentityPrvd.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="AspNet.Security.OAuth.BattleNet" Version="9.4.0" />
     <PackageReference Include="AspNet.Security.OAuth.Discord" Version="9.4.0" />
     <PackageReference Include="AspNet.Security.OAuth.GitHub" Version="9.4.0" />
+    <PackageReference Include="AspNet.Security.OAuth.Spotify" Version="9.4.0" />
     <PackageReference Include="AspNet.Security.OAuth.Twitter" Version="9.4.0" />
     <PackageReference Include="AspNet.Security.OpenId.Steam" Version="9.0.0" />
     <PackageReference Include="EFCore.NamingConventions" Version="9.0.0" />
