Add QrSignin support

--- a/src/IdentityPrvd.WebApi/IdentityPrvd.WebApi.csproj
+++ b/src/IdentityPrvd.WebApi/IdentityPrvd.WebApi.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\IdentityPrvd\IdentityPrvd.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
